force-app/main/default/objects/DreampassExpiration__c/DreampassExpiration__c.object-meta.xml
<CustomObject>
    <label>Dreampass Expiration</label>
    <nameField>
        <displayFormat>DX-{000000}</displayFormat>
        <label>Dreampass Expirations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dreampass Expirations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>