force-app/main/default/objects/DreampassExpiration__c/fields/AccountCompany__c.field-meta.xml
<CustomField>
    <fullName>AccountCompany__c</fullName>
    <formula>Account__r.Dreampass_CompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Company</label>
    <type>Text</type>
</CustomField>