force-app/main/default/objects/DreampassExpiration__c/fields/Dreampass_Active__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dreampass Active</label>
    <type>Checkbox</type>
</CustomField>