force-app/main/default/objects/DreampassExpiration__c/fields/Dreampass_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_Expiration__c</fullName>
    <label>Dreampass Expiration</label>
    <type>DateTime</type>
</CustomField>