force-app/main/default/objects/DreampassExpiration__c/fields/LastProcessed__c.field-meta.xml
<CustomField>
    <fullName>LastProcessed__c</fullName>
    <label>Last Processed</label>
    <type>DateTime</type>
</CustomField>