force-app/main/default/objects/DreampassExpiration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountCompany__c</columns>
    <columns>AccountEmail__c</columns>
    <columns>Dreampass_Active__c</columns>
    <columns>Dreampass_Expiration__c</columns>
    <columns>LastProcessed__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>