force-app/main/default/objects/DreampassExpiration__c/listViews/Expiring_Today.listView-meta.xml
<ListView>
    <fullName>Expiring_Today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountCompany__c</columns>
    <columns>AccountEmail__c</columns>
    <columns>Dreampass_Active__c</columns>
    <columns>Dreampass_Expiration__c</columns>
    <columns>LastProcessed__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dreampass_Expiration__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Expiring Before Tomorrow</label>
</ListView>