force-app/main/default/objects/DreampassExpiration__c/listViews/Staff_Expiring_before_2PM_Today.listView-meta.xml
<ListView>
    <fullName>Staff_Expiring_before_2PM_Today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountCompany__c</columns>
    <columns>AccountEmail__c</columns>
    <columns>Dreampass_Active__c</columns>
    <columns>Dreampass_Expiration__c</columns>
    <columns>LastProcessed__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dreampass_Expiration__c</field>
        <operation>lessOrEqual</operation>
        <value>5/25/2022 2:00 PM</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Employee</value>
    </filters>
    <filters>
        <field>AccountEmail__c</field>
        <operation>notContain</operation>
        <value>@salesforce.com</value>
    </filters>
    <label>Staff Expiring before 2PM Today</label>
</ListView>